// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button2 /> renders correctly 1`] = `
<Button__StyledButton
  className="btn"
  disabled={false}
>
  <div />
</Button__StyledButton>
`;

exports[`<Button2 /> renders optional Tooltip when props.tip provided 1`] = `
<Tooltip
  position="top"
  tip="test_tip"
>
  <Button__StyledButton
    className="btn"
    disabled={false}
  >
    <div />
  </Button__StyledButton>
</Tooltip>
`;

exports[`<Button2 /> renders optional icon 1`] = `
<Button__StyledButton
  className="btn btn-with-icon"
  disabled={false}
>
  <div>
    <Icon
      faStyle="fas"
      fixedWidth={false}
      name="folder"
    />
  </div>
</Button__StyledButton>
`;
